Revision history for Dist::Zilla::Plugin::MinimumPerl

{{$NEXT}}

	Expanded the prereq specification so we now separate the configure, test, and runtime phases RT#61028 ( thanks DAGOLDEN! )

1.003	2011-04-21 16:19:04 UTC

	Make sure that we scan only .t and .pl/pm files ( thanks RT#67355 and DOHERTY )

1.002	2011-04-01 04:25:20 UTC

	Re-release because v1.001 somehow didn't get on CPAN... /me smacks myself!
	Minor POD tweaks

1.001	2010-12-08 02:54:32 UTC

	Converted to Dist::Zilla for the release process!
	Updated to support Dist::Zilla v4
	Use MooseX::Types::Perl to validate the perl attr
	Now scans only the t/, lib/, and executable files for perl code ( thanks DAGOLDEN )

0.02	0000-00-00 00:00:00 UTC

	d0h, the logic for finding the minimum Perl version was reversed!

0.01	0000-00-00 00:00:00 UTC

	initial release